--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -1,9 +1,15 @@
 version: "3.9"  # optional since v1.27.0
 services:
+  h0ck-core:
+    container_name: "h0ck-core"
+    image: "h0ck/core"
+    ports:
+      - "7000:80"
+    depends_on: redis
+    environment: 
+      - REDIS_SERVER=h0ck-redis
   redis:
     container_name: "h0ck-redis"
     image: "bitnami/redis:latest"
-    ports:
-      - "6379:6379"
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
