--- a/frameworks/layers/layer-framework-scraping/nodejs/package.json
+++ b/frameworks/layers/layer-framework-scraping/nodejs/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^9.1.1",
-    "puppeteer-core": "^9.1.1"
+    "puppeteer-core": "^9.1.1",
+    "chrome-aws-lambda": "^9.1.0"
   }
 }
