--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "infrastructure",
+  "name": "h0ck-infrastructure",
   "version": "0.1.0",
   "bin": {
     "infrastructure": "bin/infrastructure.js"
@@ -10,15 +10,13 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.104.0",
-    "aws-cdk": "1.104.0",
+    "aws-cdk": "2.0.0-rc.4",
     "jest": "^26.4.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-ecr-assets": "^1.105.0",
-    "@aws-cdk/aws-iam": "^1.104.0",
-    "@aws-cdk/aws-lambda": "^1.104.0",
-    "@aws-cdk/core": "1.104.0",
-    "js-yaml": "^4.1.0"
+    "@aws-cdk/aws-s3": "^1.106.1",
+    "aws-cdk-lib": "2.0.0-rc.4",
+    "constructs": "^10.0.0",
+    "dotenv": "^10.0.0"
   }
 }
