feat: Updating docker-compose

--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -2,12 +2,13 @@ version: "3.9"  # optional since v1.27.0
 services:
   h0ck-core:
     container_name: "h0ck-core"
-    image: "h0ck/core"
+    image: "h0ck/core:latest"
     ports:
       - "7000:80"
     depends_on: redis
     environment: 
-      - REDIS_SERVER=h0ck-redis
+      - REDIS_HOST=h0ck-redis
+      - REDIS_PORT=6379
   redis:
     container_name: "h0ck-redis"
     image: "bitnami/redis:latest"
