--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -4,8 +4,9 @@ services:
     container_name: "h0ck-core"
     image: "h0ck/core:latest"
     ports:
-      - "7000:80"
-    depends_on: redis
+      - "7001:7001"
+    depends_on: 
+      - redis
     environment: 
       - REDIS_HOST=h0ck-redis
       - REDIS_PORT=6379
