feat: Updated docker compose

--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -8,3 +8,13 @@ services:
       - 6379:6379
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+  h0ck-core:
+    container_name: "h0ck-core"
+    image: "h0ck/core:latest"
+    ports:
+      - "7001:7001"
+    depends_on: 
+      - redis
+    environment: 
+      - REDIS_HOST=h0ck-redis
+      - REDIS_PORT=6379
