--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
   redis:
     container_name: "h0ck-redis"
     image: "bitnami/redis:latest"
-    ports: 
-      - 6379:6379
+    # ports: 
+    #   - 6379:6379
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
   h0ck-core:
