feat: Deployment variabilization

--- a/backend-docker/docker-compose.yaml
+++ b/backend-docker/docker-compose.yaml
@@ -18,3 +18,4 @@ services:
     environment: 
       - REDIS_HOST=h0ck-redis
       - REDIS_PORT=6379
+      - CDK_DEFAULT_REGION=${CDK_DEFAULT_REGION}
